sensord (0.6.34) unstable; urgency=low

  [Antti Virtanen]
  * propertyChanged signals aren't anymore sent through dbus to apps since qmSystem nor QtMob Sensors API supports property notifications. Fixes: NB#216173.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Mon, 03 Jan 2011 16:25:22 +0200

sensord (0.6.33) unstable; urgency=low

  [Lihan Guo]
  * Calibration runs for 1 min after switch display on. Fixes: NB#197193.
  * Fixes: NB#202427

  [Timo Rongas]
  * Separated Position.Stable calculation from Screen.* calculations
  * Modified Position.Stable logic to subsample rate to 1hz and utilize
    timer for cases when dataflow stops.
  * Context Bins are connected / disconnected with start/stop to avoid
    useless propagation.
  * Fixes: NB#212767

  [Antti Virtanen]
  * Logger callpath optimized for cases when no logging happens due to too low log level.
    Check for deciding should something be logged or not is now inlined
    to make it as cheap as possible. Fixes: NB#194595.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Fri, 17 Dec 2010 12:39:45 +0200

sensord (0.6.32) unstable; urgency=low

  [Lihan Guo]
  * Fixes: NB#199971 - proximity sensor never returns True
  * Added new tap feature, tap sensor offers single, double and single/double tap data.
  * Added test case for stationary
  * Changed calibrationHandler to get parameter value from config.

  [Timo Rongas]
  * Fixes: NB#206204 - sensord prints debugs to console on startup
  * Fixes: NB#203996 - sensord-contextfw-tests fail during execution.
  * Fixes: NB#196760 - Accelerometer Axis swapped (compared to SD)
  * Screen.TopEdge rotation compared to raw axis directions can be
    controlled with config parameter.

  [Antti Virtanen]
  * Loader now initializes plugins in reverse order so depenencies gets
    initialized first.
  * Moved context related sensor startup from main() to sensor plugin Init().
  * Replaced some magic number #define with static consts.